Removed full-size navigation, as it isn't collapsing correctly on all screen sizes (mobile). Therfore will implement that in a future update.

--- a/assets/style.css
+++ b/assets/style.css
@@ -95,7 +95,6 @@
   margin-right: 10px;
 }
 .navbar-collapse {
-  height: 100vh;
   text-align: right;
 }
 .nav-barlogo-notext {
